# crypt_split

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  local_cloud_example.json
src/: SETUP.md  cloud.rs  key_management.rs  main.rs  redis_db.rs  split.rs
