[package]
name = "crypt_split"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-siv = "0.7.0"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
kbkdf = "0.0.1"
redis = "0.32.7"
scrypt = "0.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
    "v7",
]
