[package]
name = "crypt_split"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-siv = "0.7.0"
clap = { version = "4.5.50", features = ["derive"] }
divan = "0.1.21"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
kbkdf = "0.0.1"
password-hash = "0.5.0"
rand = "0.9.2"
redis = "0.32.7"
redis-derive = "0.2.0"
scrypt = "0.11.0"
serde = {version="1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sha2 = "0.10.9"
zeroize = "1.8.2"

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
    "v7",
]
